# roomeroom

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/roomeroom/: db.sqlite3  manage.py
backend/roomeroom/roomeroom/: asgi.py  settings.py  urls.py  wsgi.py
backend/roomeroom/rooms/: admin.py  models.py
backend/roomeroom/rooms/api/: serializers.py  urls.py  views.py
backend/roomeroom/rooms/migrations/: 0001_initial.py  0002_rename_pushed_booking_active.py  0003_alter_booking_active.py
backend/roomeroom/users/api/: serializers.py  views.py
frontend/: .prettierrc  package.json
frontend/src/: App.js  router.js
frontend/src/components/: BookingCard.js  Loading.js  RoomCard.js
frontend/src/context/: auth.js  service.js
frontend/src/pages/: BookingDetail.js  RoomDetail.js  RoomList.js  index.js  login.js
frontend/src/services/: index.js
